refactor cloudStream functionality